# UMaT-Grounded-Conversational-NLP-Assistant

./: .gitignore  UMaT Lecturer Information Gathering.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: admin.py  auth.py  chat.py  departments.py  dependencies.py  faculties.py  locations.py  staff.py  utils.py
backend/app/core/: config.py  rbac.py  security.py
backend/app/data/: __init__.py  extract_markdown.py  validate_seed.py
backend/app/db/: models.py  seed.py  session.py
backend/app/ml/: README.md  __init__.py  config.py  dataset_builder.py  eval_generator.py  eval_retriever.py  fact_pack.py  generator_model.py  inference.py  retriever_baseline.py  retriever_model.py  splits.py  synthetic_data.py  templates.py  train_generator.py  train_retriever.py
backend/app/nlp/: __init__.py  entity_ruler.py  intents.py  normalize.py  response_builder.py  retrieval.py
backend/app/schemas/: auth.py  chat.py  (+5 more)
backend/notebooks/: README.md  grounded_conversational_nlp_colab.ipynb
backend/scripts/: __init__.py  build_training_splits.py  evaluate_models.py  export_canonical_dataset.py  generate_synthetic_dialogues.py  run_full_ml_pipeline.py  run_ml_smoke_test.py  train_generator.py  train_retriever.py
backend/tests/: conftest.py  test_api.py  test_dataset_builder.py  test_eval_generator.py  test_extraction.py  test_ml_config.py  test_ml_inference.py  test_notebook_manifest.py  test_retriever_baseline.py  test_seed_pipeline.py  test_smoke_pipeline.py  test_splits.py  test_synthetic_data.py  test_train_generator.py  test_train_retriever.py
(+23 files in other folders)
